--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+.gallery-image-hover {
+  position: relative;
+  display: inline-block;
+}
+.gallery-image-hover .static-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.gallery-image-hover .gif-img {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.gallery-image-hover:hover .static-img {
+  display: none;
+}
+.gallery-image-hover:hover .gif-img {
+  display: block;
+}
 body {
   font-family: 'Space Mono', monospace;
 }
@@ -62,9 +85,8 @@ body {
   width: 445px;
   align-items: flex-start;
   gap: 32px;
-  position: absolute;
-  top: 24px;
-  left: 16px;
+  position: relative;
+  top: 0;
 }
 
 .d-landing .frame-2 {
