--- a/css/grid.css
+++ b/css/grid.css
@@ -10,10 +10,7 @@
 	margin-right: 16px;
 }
 
-[class^='grid-col-'] {
-	padding-left: 12px;
-	padding-right: 12px;
-}
+
 
 .grid-col-1of12 { flex: 0 0 calc((100% - 11 * 24px - 2 * 16px) / 12); max-width: calc((100% - 11 * 24px - 2 * 16px) / 12); }
 .grid-col-2of12 { flex: 0 0 calc(2 * ((100% - 11 * 24px - 2 * 16px) / 12) + 24px); max-width: calc(2 * ((100% - 11 * 24px - 2 * 16px) / 12) + 24px); }
@@ -30,7 +27,7 @@
 
 [class^='grid-col-'] {
 	float: left;
-	padding 15px;
+	padding: 24px;
 	/*align-content: center;
 */}
 
