--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@ html, body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: cormorantInfant;
-  background-color: #F9F9F9;
+  font-family: 'Space Mono', monospace;
+  background-color: #fffdf4;
   scroll-behavior: smooth;
 }
 
