--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
+.hover-swap {
+  position: relative;
+  display: inline-block;
+}
+.hover-swap .default-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.hover-swap .hover-img {
+  display: none;
+  width: 100%;
+  height: auto;
+}
+.hover-swap:hover .default-img {
+  display: none;
+}
+.hover-swap:hover .hover-img {
+  display: block;
+}
+
+[class^='grid-col-'] img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: contain;
+}
 html, body {
   margin: 0;
   padding: 0;
@@ -17,8 +44,12 @@ html, body {
 }
 
 .d-landing .div {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   position: relative;
+  padding-bottom: 68px; /* Adjust to match contact nav height */
 }
 
 .d-landing .m-logo img {
@@ -379,7 +410,11 @@ html, body {
 
 .gallery-section {
   position: relative;
+  margin-top: auto;
+  margin-bottom: auto;
 }
+
+
 
 .footer {
   position: absolute;
