--- a/css/grid.css
+++ b/css/grid.css
@@ -3,15 +3,7 @@
 	display: flex;
 	flex-direction: column;
 }
-/* 8-column grid for portfolio layout */
-.grid-col-1of8 {
-	width: 12.5%;
-	float: left;
-}
-.grid-col-2of8 {
-	width: 25%;
-	float: left;
-}
+
 *, *::after, *::before {
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -53,6 +45,9 @@
 	display: flex;
 	align-items: center;
 	gap: 24px;
+	display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 }
 
 .grid-col-1of12 {
