--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,12 @@ html, body {
   display: block;
 }
 
-
+.gallery-caption {
+  display: grid;
+  grid-template-columns: auto 1fr; /* year column + title column */
+  column-gap: 8px;                 /* gap between year and title */
+  align-items: start;
+}
 
 .d-landing .text-wrapper {
   position: absolute;
@@ -480,15 +485,9 @@ html, body {
   .d-landing .div {
     display: flex;
     flex-direction: row;
-    gap: 16px;
-    margin: 0;
-    padding: 0;
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
     overflow: hidden;
-  }
-
-  .grid-row {
-  gap: 16px;
   }
 
   /* gallery: positioning context, no extra padding */
@@ -496,16 +495,16 @@ html, body {
     position: relative;
     padding: 0;
     margin: 0;
-    width: 100vw;
+    width: 100%;
   }
 
    /* make each section exactly half of viewport minus half the gutter so combined = 100vw */
   .portfolio-section.grid-col-4of12,
   .gallery-section.grid-col-8of12 {
     position: relative;
-    width: calc((100vw - 16px) / 2);
-    max-width: calc((100vw - 16px) / 2);
-    flex: 0 0 calc((100vw - 16px) / 2);
+    flex: 0 0 calc(50% - 16px);
+    width: calc(50% - 16px);
+    max-width: calc(50% - 16px);
     margin: 0;
     padding: 0;
   }
@@ -620,7 +619,7 @@ html, body {
 }
 
 
-.text-wrapper-4,
+.gallery-caption,
 .text-wrapper-5,
 .gallery-section [data-index],
 .hover-img {
